# warehouses

./: .drone.yml  .gitmodules  Cargo.toml  Dockerfile
config/: development.toml  k8s.toml
docker/: Dockerfile.run  Dockerfile.warehouses  docker-compose.yml
migrations/2018-05-07-000000_create_warehouses/: down.sql  up.sql
migrations/2018-05-08-000000_create_stocks/: up.sql
migrations/2018-05-08-000000_create_warehouse_products/: down.sql  up.sql
migrations/2018-05-09-000000_create_roles/: up.sql
migrations/2018-05-09-000000_create_warehouse_users/: down.sql  up.sql
migrations/2018-09-11-113846_update_warehouses/: down.sql  up.sql
src/: config.rs  errors.rs  lib.rs  log.rs  main.rs  schema.rs  sentry_integration.rs  types.rs
src/controller/: mod.rs  routing.rs
src/models/: mod.rs  role.rs  stock.rs  warehouse.rs  warehouse_product.rs  warehouse_user.rs
src/repos/: mod.rs  roles.rs  stocks.rs  warehouse.rs  warehouse_products.rs  warehouse_users.rs  warehouses.rs
src/services/: mod.rs  warehouse.rs
tests/: requests.rs
tests/common/: mod.rs
tests/testcases/: main.rs  requests.rs
tests/testcases/common/: mod.rs
