[package]
name = "warehouses"
version = "0.1.0"

[lib]
name = "warehouses_lib"
path = "src/lib.rs"

[dependencies]
bb8 = { git = "https://github.com/StoriqaTeam/bb8" }
bb8-postgres = { git = "https://github.com/StoriqaTeam/bb8" }
chrono = "*"
config = "*"
derive_more = "*"
env_logger = "*"
failure = "0.1"
futures = "0.1"
futures-state-stream = "0.2"
geo = "*"
hyper = "0.11"
hyper-tls="0.1"
iso_country = { git = "https://github.com/StoriqaTeam/iso_country", features = ["serde"] }
log = "*"
maplit = "*"
postgres = { git = "https://github.com/StoriqaTeam/rust-postgres", features = ["with-uuid-0.6"] }
postgres-derive = { git = "https://github.com/StoriqaTeam/rust-postgres-derive", branch = "fromsql-lifetime" }
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio-core = "*"
tokio-postgres = { git = "https://github.com/StoriqaTeam/rust-postgres", features = ["with-geo-0.8", "with-serde_json-1", "with-uuid-0.6"] }
stq_acl = { path = "vendor/libstqbackend/acl" }
stq_db = { path = "vendor/libstqbackend/db" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_roles = { path = "vendor/libstqbackend/roles" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_types = { path = "vendor/libstqbackend/types" }
uuid = { version = "*", features = ["serde", "v4"] }
