[package]
name = "warehouses"
version = "0.1.0"

[lib]
name = "warehouses_lib"
path = "src/lib.rs"

[dependencies]
bb8 = { git = "https://github.com/StoriqaTeam/bb8" }
bb8-postgres = { git = "https://github.com/StoriqaTeam/bb8" }
chrono = "0.4"
config = { version = "0.9", default-features = false, features = ["toml"] }
derive_more = "0.11"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
futures-state-stream = "0.2"
geo = { version = "0.10", features = ["use-serde"] }
hyper = "0.11"
hyper-tls = "0.1"
iso_country = { git = "https://github.com/StoriqaTeam/iso_country", features = ["serde"] }
log = "0.4"
maplit = "1.0"
postgres = { git = "https://github.com/StoriqaTeam/rust-postgres", features = ["with-geo-0.10", "with-uuid-0.6"] }
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stq_acl = { path = "vendor/libstqbackend/acl" }
stq_api = { path = "vendor/libstqbackend/api" }
stq_db = { path = "vendor/libstqbackend/db" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_roles = { path = "vendor/libstqbackend/roles" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_types = { path = "vendor/libstqbackend/types" }
tokio = "0.1"
tokio-core = "0.1"
tokio-postgres = { git = "https://github.com/StoriqaTeam/rust-postgres", features = ["with-geo-0.10", "with-serde_json-1", "with-uuid-0.6"] }
uuid = { version = "0.6", features = ["use_std", "v4", "serde"] }
sentry = "0.12"